--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Circular Image Cropper</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="fevi/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="fevi/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="fevi/favicon-16x16.png">
+    <link rel="manifest" href="fevi/site.webmanifest">
+    <link rel="mask-icon" href="fevi/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Inter', sans-serif;
+        }
         * {
             margin: 0;
             padding: 0;
@@ -191,6 +205,7 @@
         }
 
     </style>
+      <link rel="icon" type="image/x-icon" href="fevi/favicon.ico"> 
 </head>
 <body>
     <a href="#" class="name-refresh" onclick="location.reload();">Siddhesh Chaube</a>
