--- a/tooltest.html
+++ b/tooltest.html
@@ -169,13 +169,13 @@
             margin-top: 1rem;
         }
         .name-refresh {
-            position: absolute; /* Or fixed if you want it to stay on scroll */
-            top: 20px; /* Adjust as needed */
-            left: 20px; /* Adjust as needed */
+            position: absolute; 
+            top: 20px; 
+            left: 20px; 
             font-size: 1.2rem;
             font-weight: bold;
             text-decoration: none;
-            color: #333; /* Or any color you prefer */
+            color: #333; 
             cursor: pointer;
         }
 
@@ -184,7 +184,7 @@
             text-align: center;
             padding: 1rem 0;
             margin-top: 2rem;
-            border-top: 1px solid #eee; /* Optional top border */
+            border-top: 1px solid #eee; 
         }
 
         .social-links {
@@ -194,8 +194,8 @@
         .social-links a {
             display: inline-block;
             margin: 0 0.5rem;
-            font-size: 1.5rem; /* Adjust icon size */
-            color: #333; /* Or your preferred color */
+            font-size: 1.5rem; 
+            color: #333; 
             text-decoration: none;
         }
 
@@ -241,7 +241,7 @@
     <br><br><br><Br><br>
 
     <footer>
-        <p>&copy; 2025 Siddhesh Chaube. All Rights Reserved.</p>
+        <p>&copy; 2025 <a href="https://siddhesh.site/home.html">Siddhesh Chaube.</a> All Rights Reserved.</p>
         <div class="social-links">
             <!-- <a href="https://in.linkedin.com/in/siddhesh-chaube">LinkedIn</a>
             <a href="https://github.com/ogsiddhesh/ogsiddhesh">Github</a> -->
