--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     <br><br><br><Br><br>
 
     <footer>
-        <p>&copy; 2025 Siddhesh Chaube. All Rights Reserved.</p>
+        <p>&copy; 2025 <a href="https://siddhesh.site/home.html">Siddhesh Chaube.</a> All Rights Reserved.</p>
         <div class="social-links">
             <!-- <a href="https://in.linkedin.com/in/siddhesh-chaube">LinkedIn</a>
             <a href="https://github.com/ogsiddhesh/ogsiddhesh">Github</a> -->
