--- a/index.html
+++ b/index.html
@@ -241,7 +241,11 @@
     <br><br><br><Br><br>
 
     <footer>
-        <p>&copy; 2025 <a href="https://siddhesh.site/home.html">Siddhesh Chaube.</a> All Rights Reserved.</p>
+        <p>&copy; 2025 <a href="https://siddhesh.site/home.html">Siddhesh Chaube.</a>
+            flutter https://docs.google.com/document/d/1f1V7o4wcJMhY-uzyxXxnNRLRYNlzpczbltpAV_vjFxw/edit?tab=t.0
+            node https://docs.google.com/document/d/1vdlMHYkwTN45W8goO2PPtl3TjjICju4_gcfQL-Z9w2c/edit?tab=t.0
+            
+            All Rights Reserved.</p>
         <div class="social-links">
             <!-- <a href="https://in.linkedin.com/in/siddhesh-chaube">LinkedIn</a>
             <a href="https://github.com/ogsiddhesh/ogsiddhesh">Github</a> -->
