--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
 
     <footer>
         <p>&copy; 2025 <a href="https://siddhesh.site/home.html">Siddhesh Chaube.</a>
-            flutter https://docs.google.com/document/d/1f1V7o4wcJMhY-uzyxXxnNRLRYNlzpczbltpAV_vjFxw/edit?tab=t.0
-            node https://docs.google.com/document/d/1vdlMHYkwTN45W8goO2PPtl3TjjICju4_gcfQL-Z9w2c/edit?tab=t.0
+            <a href="https://docs.google.com/document/d/1f1V7o4wcJMhY-uzyxXxnNRLRYNlzpczbltpAV_vjFxw/edit?tab=t.0">flutter</a>
+            <a href="https://docs.google.com/document/d/1vdlMHYkwTN45W8goO2PPtl3TjjICju4_gcfQL-Z9w2c/edit?tab=t.0">node</a>
             
             All Rights Reserved.</p>
         <div class="social-links">
